--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
     "make-coverage-badge": "^1.2.0",
+    "msw": "^2.2.7",
     "prettier": "^3.2.5",
     "prettier-eslint": "^16.3.0",
     "ts-jest": "^29.1.2",
