feat: add GitHub interaction for status check (#5)
Add the actions GitHub package to enable creation of hydrated octokit
client.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,6 @@ jobs:
         id: test-action
         uses: ./
         with:
-          context: 'Test Action'
+          context: 'Test Action (${{ github.event_name }})'
           state: 'success'
-          sha: ${{ github.event.pull_request.head.sha }}
+          sha: ${{ github.event.pull_request.head.sha || github.sha }}
